--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "socket.io-client": "^3.0.4",
     "velocity-animate": "^1.5.2",
     "vue": "^2.6.11",
+    "vue-loading-overlay": "^3.4.2",
     "vue-router": "^3.2.0",
     "vue-socket.io": "^3.0.10",
     "vue-socket.io-extended": "^4.0.5",
