--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "socket.io-client": "^3.0.4",
     "velocity-animate": "^1.5.2",
     "vue": "^2.6.11",
+    "vue-izitoast": "^1.2.1",
     "vue-loading-overlay": "^3.4.2",
     "vue-router": "^3.2.0",
     "vue-socket.io": "^3.0.10",
     "vue-socket.io-extended": "^4.0.5",
+    "vue-toastification": "^1.7.8",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
