--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "socket.io-client": "^3.0.4",
     "velocity-animate": "^1.5.2",
     "vue": "^2.6.11",
+    "vue-gtag": "^1.10.0",
     "vue-izitoast": "^1.2.1",
     "vue-loading-overlay": "^3.4.2",
     "vue-router": "^3.2.0",
